--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-spring": "^8.0.27",
+    "react-use-gesture": "^8.0.1",
     "vercel": "^21.0.1",
     "web-vitals": "^0.2.4"
   },
